--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm cache clean --force && npm install --force && npm run build"
+  command = "npm cache clean --force && npm install --legacy-peer-deps --force && npm run build"
   publish = "dist"
